Corregi errores y empece con javaFx